# gold_shop

./: .gitignore  CLAUDE.md  README.md  architecture-flow.drawio  auth.py  main.py  pyproject.toml
backend/: alembic.ini  database.py  dependencies.py  main.py  pyproject.toml
backend/agent/: client.py  executor.py  tools.py
backend/alembic/: env.py
backend/alembic/versions/: 03777465c92f_add_user_id_to_tables.py  6f1638781f64_fix_constraints_for_multi_user_setup.py
backend/crud/: auth_crud.py  daily_prices_crud.py  dashboard_crud.py  item_types_crud.py  items_crud.py
backend/models/: models.py  schemas.py
backend/routes/: assistant.py  auth.py  auth_route.py  daily_prices.py  dashboard.py  gold_items.py  item_types.py  silver_items.py
crud/: dashboard.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css  main.jsx  theme.css
frontend/src/api/: assistant.js  auth.js  dashboard.js  inventory.js  itemTypes.js  prices.js
frontend/src/components/: ChatWidget.jsx  InventorySection.jsx  Navbar.jsx  ToastProvider.jsx  addItemSection.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx  useToast.js
frontend/src/pages/: Dashboard.jsx  Inventory.jsx  ItemTypes.jsx  Login.jsx  Prices.jsx  Register.jsx  SoldItems.jsx
models/: models.py  schemas.py
routes/: item_types.py
